Harmonize default iota/tau variants with `i`/`l`.
Also move zshaped `i`/`l`/iota variants to be after hooky/hooky-bottom variants for more consistent serif buildup order.

--- a/build-plans.toml
+++ b/build-plans.toml
@@ -684,14 +684,12 @@ exportGlyphNames = true
 [buildPlans.IosevkaAile.variants.design]
 capital-i = "serifless"
 capital-j = "serifless"
-capital-k = "straight-serifless"
 capital-m = "flat-bottom-serifless"
 capital-w = "straight-flat-top-serifless"
 a = "double-storey-serifless"
 d = "toothed-serifless"
 e = "flat-crossbar"
 f = "flat-hook-serifless"
-g = "single-storey-serifless"
 i = "serifless"
 j = "flat-hook-serifless"
 k = "straight-serifless"
@@ -705,11 +703,8 @@ long-s = "flat-hook-serifless"
 eszet = "longs-s-lig-serifless"
 lower-iota = "flat-tailed"
 lower-lambda = "straight-turn"
-lower-tau = "flat-tailed"
-cyrl-capital-ka = "symmetric-connected-serifless"
-cyrl-ka = "symmetric-connected-serifless"
+lower-tau = "short-tailed"
 cyrl-em = "flat-bottom-serifless"
-cyrl-capital-u = "straight-serifless"
 cyrl-u = "straight-serifless"
 cyrl-ef = "serifless"
 cyrl-yeri = "corner"
@@ -722,14 +717,12 @@ micro-sign = "toothed-serifless"
 [buildPlans.IosevkaAile.derivingVariants.mathtt.design]
 capital-i = "serifed"
 capital-j = "serifless"
-capital-k = "straight-serifless"
 capital-m = "flat-bottom-serifless"
 capital-w = "straight-flat-top-serifless"
 a = "double-storey-serifless"
 d = "toothed-serifless"
 e = "flat-crossbar"
 f = "flat-hook-serifless"
-g = "single-storey-serifless"
 i = "serifed"
 j = "flat-hook-serifed"
 k = "straight-serifless"
@@ -743,11 +736,8 @@ long-s = "flat-hook-serifless"
 eszet = "longs-s-lig-serifless"
 lower-iota = "serifed-flat-tailed"
 lower-lambda = "straight-turn"
-lower-tau = "flat-tailed"
-cyrl-capital-ka = "symmetric-connected-serifless"
-cyrl-ka = "symmetric-connected-serifless"
+lower-tau = "short-tailed"
 cyrl-em = "flat-bottom-serifless"
-cyrl-capital-u = "straight-serifless"
 cyrl-u = "straight-serifless"
 cyrl-ef = "serifless"
 cyrl-yeri = "corner"
@@ -784,7 +774,7 @@ w = "straight-flat-top-serifed"
 long-s = "flat-hook-bottom-serifed"
 eszet = "longs-s-lig-bottom-serifed"
 lower-iota = "serifed-flat-tailed"
-lower-tau = "flat-tailed"
+lower-tau = "short-tailed"
 cyrl-em = "flat-bottom-serifed"
 at = "fourfold"
 percent = "rings-continuous-slash"
