--- a/params/variants.toml
+++ b/params/variants.toml
@@ -2321,17 +2321,8 @@ selector."dotlessi/sansSerif" = "serifless"
 selector."dotlessi/compLigRight" = "serifed"
 selector."dotlessi/ital" = "tailedSerifed"
 
-[prime.i.variants.zshaped]
-rank = 2
-groupRank = 1
-description = "Z-shaped `i`"
-selector.dotlessi = "zshaped"
-selector."dotlessi/sansSerif" = "serifless"
-selector."dotlessi/compLigRight" = "zshaped"
-selector."dotlessi/ital" = "tailedSerifed"
-
 [prime.i.variants.serifless]
-rank = 3
+rank = 2
 groupRank = 1
 description = "`i` like a straight line"
 selector.dotlessi = "serifless"
@@ -2340,7 +2331,7 @@ selector."dotlessi/compLigRight" = "hooky"
 selector."dotlessi/ital" = "tailed"
 
 [prime.i.variants.hooky]
-rank = 4
+rank = 3
 groupRank = 1
 description = "Hooky `i`"
 selector.dotlessi = "hooky"
@@ -2349,13 +2340,22 @@ selector."dotlessi/compLigRight" = "hooky"
 selector."dotlessi/ital" = "tailedSerifed"
 
 [prime.i.variants.hooky-bottom]
-rank = 5
+rank = 4
 groupRank = 1
 description = "`i` with a sharp-turning horizontal tail"
 selector.dotlessi = "hookyBottom"
 selector."dotlessi/sansSerif" = "serifless"
 selector."dotlessi/compLigRight" = "zshaped"
 selector."dotlessi/ital" = "tailed"
+
+[prime.i.variants.zshaped]
+rank = 5
+groupRank = 1
+description = "Z-shaped `i`"
+selector.dotlessi = "zshaped"
+selector."dotlessi/sansSerif" = "serifless"
+selector."dotlessi/compLigRight" = "zshaped"
+selector."dotlessi/ital" = "tailedSerifed"
 
 [prime.i.variants.serifed-asymmetric]
 rank = 6
@@ -2686,22 +2686,8 @@ selector."l/phoneticLeft" = "hookyPL"
 selector.lCurlyTail = "hooky"
 selector.lyogh = "hooky"
 
-[prime.l.variants.zshaped]
-rank = 4
-groupRank = 1
-description = "Z-shaped `l`"
-selector.l = "zshaped"
-selector."l/sansSerif" = "serifless"
-selector."l/compLigRight" = "zshaped"
-selector."l/reduced/decompress" = "zshaped"
-selector."l/reduced/rtail" = "hookyRTail"
-selector."l/reduced/rtailDec" = "hookyRTailDec"
-selector."l/phoneticLeft" = "hookyPL"
-selector.lCurlyTail = "hooky"
-selector.lyogh = "hooky"
-
 [prime.l.variants.hooky-bottom]
-rank = 5
+rank = 4
 groupRank = 1
 description = "`l` with a straight sharp-turning horizontal tail"
 selector.l = "hookyBottom"
@@ -2713,6 +2699,20 @@ selector."l/reduced/rtailDec" = "seriflessRTailDec"
 selector."l/phoneticLeft" = "seriflessPL"
 selector.lCurlyTail = "serifless"
 selector.lyogh = "serifless"
+
+[prime.l.variants.zshaped]
+rank = 5
+groupRank = 1
+description = "Z-shaped `l`"
+selector.l = "zshaped"
+selector."l/sansSerif" = "serifless"
+selector."l/compLigRight" = "zshaped"
+selector."l/reduced/decompress" = "zshaped"
+selector."l/reduced/rtail" = "hookyRTail"
+selector."l/reduced/rtailDec" = "hookyRTailDec"
+selector."l/phoneticLeft" = "hookyPL"
+selector.lCurlyTail = "hooky"
+selector.lyogh = "hooky"
 
 [prime.l.variants.serifed-asymmetric]
 rank = 6
@@ -4756,26 +4756,26 @@ tagKind = "letter"
 
 [prime.lower-iota.variants.tailless]
 rank = 1
-description = "Greek lower Iota (`ι`) with a tailless shape"
+description = "Greek lower Iota (`ι`) like a straight line"
 selector."grek/iota" = "serifless"
 selector."grek/iota/sansSerif" = "serifless"
 
 [prime.lower-iota.variants.tailless-serifed]
 rank = 2
-description = "Greek lower Iota (`ι`) with a top serif and tailless shape"
+description = "Greek lower Iota (`ι`) like a straight line with top serif"
 selector."grek/iota" = "hooky"
 selector."grek/iota/sansSerif" = "serifless"
 
-[prime.lower-iota.variants.zshaped]
-rank = 3
-description = "Z-shaped Greek lower Iota (`ι`)"
-selector."grek/iota" = "zshaped"
-selector."grek/iota/sansSerif" = "serifless"
-
 [prime.lower-iota.variants.hooky-bottom]
-rank = 4
+rank = 3
 description = "Greek lower Iota (`ι`) with a sharp-turning horizontal tail"
 selector."grek/iota" = "hookyBottom"
+selector."grek/iota/sansSerif" = "serifless"
+
+[prime.lower-iota.variants.zshaped]
+rank = 4
+description = "Z-shaped Greek lower Iota (`ι`)"
+selector."grek/iota" = "zshaped"
 selector."grek/iota/sansSerif" = "serifless"
 
 [prime.lower-iota.variants.tailed]
@@ -7507,13 +7507,13 @@ lower-alpha = "crossing"
 capital-gamma = "serifless"
 capital-delta = "straight"
 lower-delta = "rounded"
-lower-iota = "serifed-flat-tailed"
+lower-iota = "serifed-semi-tailed"
 capital-lambda = "straight-serifless"
 lower-lambda = "straight"
 lower-mu = "tailed-serifless"
 lower-xi = "flat-top"
 lower-pi = "tailed"
-lower-tau = "flat-tailed"
+lower-tau = "semi-tailed"
 lower-chi = "straight-serifless"
 cyrl-capital-zhe = "symmetric-connected"
 cyrl-zhe = "symmetric-connected"
@@ -7596,6 +7596,8 @@ u = "tailed-serifless"
 y = "cursive-serifless"
 long-s = "flat-hook-tailed"
 eszet = "sulzbacher-tailed-serifless"
+lower-iota = "tailed-serifed"
+lower-tau = "tailed"
 cyrl-u = "cursive-serifless"
 cyrl-ef = "cursive"
 cyrl-yeri = "round"
@@ -7673,8 +7675,8 @@ micro-sign = "toothed-serifed"
 
 [composite.slab.italic]
 a = "single-storey-tailed-serifed"
-d = "tailed-serifed"
 c = "unilateral-inward-serifed"
+d = "tailed-serifed"
 f = "flat-hook-tailed"
 h = "straight-motion-serifed"
 k = "diagonal-tailed-cursive-top-left-serifed"
@@ -7725,7 +7727,7 @@ y = "straight-turn-serifless"
 long-s = "flat-hook-middle-serifed"
 eszet = "longs-s-lig-serifless"
 lower-eth = "straight-bar"
-lower-iota = "semi-tailed"
+lower-iota = "tailed"
 lower-lambda = "tailed-turn"
 lower-mu = "toothed-serifless"
 lower-pi = "tailless"
@@ -7766,7 +7768,7 @@ c = "unilateral-serifed"
 d = "toothed-serifed"
 f = "flat-hook-serifed"
 h = "straight-serifed"
-i = "serifed"
+i = "zshaped"
 k = "straight-serifed"
 m = "serifed"
 n = "straight-serifed"
@@ -7780,7 +7782,7 @@ y = "straight-turn-serifed"
 z = "straight-serifed"
 long-s = "flat-hook-double-serifed"
 eszet = "longs-s-lig-bottom-serifed"
-lower-iota = "serifed-semi-tailed"
+lower-iota = "tailed-serifed"
 lower-mu = "toothed-serifed"
 cyrl-ze = "unilateral-serifed"
 cyrl-capital-ka = "straight-serifed"
@@ -7859,6 +7861,7 @@ diacritic-dot = "square"
 [composite.ss02.slab-override.design]
 capital-j = "serifed-symmetric"
 a = "double-storey-serifed"
+d = "toothed-serifed"
 h = "straight-serifed"
 k = "straight-serifed"
 m = "serifed"
@@ -7902,9 +7905,7 @@ long-s = "flat-hook-serifless"
 eszet = "longs-s-lig-serifless"
 lower-chi = "semi-chancery-straight"
 lower-eth = "straight-bar"
-lower-iota = "serifed-semi-tailed"
 lower-lambda = "tailed-turn"
-lower-tau = "semi-tailed"
 cyrl-capital-zhe = "symmetric-touching"
 cyrl-zhe = "symmetric-touching"
 cyrl-capital-ka = "symmetric-touching-serifless"
@@ -7937,8 +7938,6 @@ k = "cursive-serifless"
 l = "tailed"
 long-s = "flat-hook-descending"
 eszet = "longs-s-lig-descending-serifless"
-lower-iota = "tailed-serifed"
-lower-tau = "tailed"
 cyrl-zhe = "symmetric-connected"
 cyrl-ka = "symmetric-connected-serifless"
 cyrl-yeri = "round"
@@ -8175,7 +8174,7 @@ y = "straight-turn-serifless"
 long-s = "flat-hook-serifless"
 eszet = "longs-s-lig-serifless"
 lower-delta = "flat-top"
-lower-iota = "serifed-semi-tailed"
+lower-iota = "tailed-serifed"
 lower-lambda = "straight-turn"
 lower-tau = "short-tailed"
 lower-chi = "straight-motion-serifed"
@@ -8360,11 +8359,9 @@ long-s = "bent-hook-middle-serifed"
 eszet = "longs-s-lig-serifless"
 capital-delta = "curly"
 lower-delta = "flat-top"
-lower-iota = "serifed-semi-tailed"
 capital-lambda = "curly-serifless"
 lower-lambda = "curly-tailed-turn"
 lower-mu = "toothed-serifless"
-lower-tau = "semi-tailed"
 lower-chi = "semi-chancery-curly"
 cyrl-capital-zhe = "curly"
 cyrl-zhe = "curly"
@@ -8397,8 +8394,6 @@ lig-neq = "slightly-slanted-dotted"
 
 [composite.ss08.italic]
 g = "single-storey-serifless"
-lower-iota = "tailed-serifed"
-lower-tau = "tailed"
 cyrl-yeri = "round"
 cyrl-yery = "round"
 
@@ -8476,7 +8471,6 @@ w = "straight-flat-top-serifless"
 y = "straight-turn-serifless"
 long-s = "flat-hook-middle-serifed"
 eszet = "longs-s-lig-serifless"
-lower-iota = "serifed-semi-tailed"
 lower-lambda = "straight-turn"
 lower-tau = "short-tailed"
 cyrl-em = "flat-bottom-serifless"
@@ -8507,7 +8501,6 @@ a = "single-storey-serifless"
 g = "single-storey-serifless"
 i = "tailed-serifed"
 l = "tailed-serifed"
-lower-iota = "tailed-serifed"
 
 [composite.ss09.slab-override.design]
 capital-d = "more-rounded-bilateral-serifed"
@@ -8664,12 +8657,10 @@ y = "straight-turn-serifless"
 eszet = "longs-s-lig-serifless"
 lower-alpha = "barred-earless-corner-tailed"
 capital-gamma = "bottom-serifed"
-lower-iota = "serifed-semi-tailed"
 lower-lambda = "straight-turn"
 lower-mu = "toothless-corner-serifless"
 lower-xi = "rounded"
 lower-pi = "small-capital"
-lower-tau = "semi-tailed"
 cyrl-capital-zhe = "symmetric-touching"
 cyrl-zhe = "symmetric-touching"
 cyrl-capital-ka = "symmetric-touching-serifless"
@@ -8707,9 +8698,7 @@ l = "tailed-serifed"
 u = "tailed-serifless"
 long-s = "bent-hook-tailed"
 eszet = "longs-s-lig-tailed-serifless"
-lower-iota = "tailed-serifed"
 lower-mu = "tailed-serifless"
-lower-tau = "tailed"
 cyrl-zhe = "cursive"
 micro-sign = "tailed-serifless"
 
@@ -8779,7 +8768,7 @@ u = "toothed-serifless"
 y = "straight-turn-serifless"
 long-s = "flat-hook-middle-serifed"
 eszet = "longs-s-lig-serifless"
-lower-iota = "semi-tailed"
+lower-iota = "tailed"
 lower-lambda = "straight-turn"
 lower-mu = "toothed-serifless"
 lower-pi = "tailless"
@@ -8830,7 +8819,7 @@ y = "straight-turn-serifed"
 z = "straight-serifed"
 long-s = "flat-hook-double-serifed"
 eszet = "longs-s-lig-bottom-serifed"
-lower-iota = "serifed-semi-tailed"
+lower-iota = "tailed-serifed"
 lower-mu = "toothed-serifed"
 cyrl-ze = "unilateral-serifed"
 cyrl-ka = "symmetric-connected-serifed"
@@ -9077,8 +9066,10 @@ long-s = "flat-hook-middle-serifed"
 eszet = "longs-s-lig-middle-serifed"
 lower-thorn = "motion-serifed"
 capital-gamma = "serifed"
+lower-iota = "serifed-semi-tailed"
 lower-lambda = "straight-turn"
 lower-mu = "toothed-bottom-right-serifed"
+lower-tau = "semi-tailed"
 cyrl-capital-ze = "bilateral-inward-serifed"
 cyrl-ze = "unilateral-inward-serifed"
 cyrl-ka = "symmetric-connected-bottom-right-serifed"
@@ -9281,7 +9272,6 @@ y = "straight-turn-serifless"
 long-s = "flat-hook-middle-serifed-xh"
 eszet = "longs-s-lig-serifless"
 lower-alpha = "barred-tailed"
-lower-iota = "serifed-semi-tailed"
 lower-lambda = "straight-turn"
 lower-tau = "short-tailed"
 cyrl-capital-u = "straight-turn-serifless"
@@ -9311,7 +9301,6 @@ micro-sign = "tailed-serifless"
 f = "extended-crossbar-at-x-height"
 long-s = "flat-hook-descending-middle-serifed-xh"
 eszet = "longs-s-lig-descending-serifless"
-lower-iota = "tailed-serifed"
 
 [composite.ss18.slab-override.design]
 capital-g = "toothless-rounded-serifed-hooked"
