Add missing feature tag to chaining plus ligation (#2118).

--- a/params/variants.toml
+++ b/params/variants.toml
@@ -7363,6 +7363,7 @@ selector."lig-hyphen" = "withoutNotch"
 [prime.lig-plus-chain]
 sampler = "++ "
 samplerExplain = "Plus ligations"
+nonBreakingTagForNewVariantSelector = "VXAA"
 
 [prime.lig-plus-chain.variants.with-notch]
 rank = 1
