--- a/params/variants.toml
+++ b/params/variants.toml
@@ -7362,6 +7362,7 @@ selector."lig-hyphen" = "withoutNotch"
 [prime.lig-plus-chain]
 sampler = "++ "
 samplerExplain = "Plus ligations"
+tagKind = "ligature"
 nonBreakingTagForNewVariantSelector = "VXAA"
 
 [prime.lig-plus-chain.variants.with-notch]
