Make the central part of Cyrillic Twe to follow lowercase Tau variants (#2122).

--- a/params/variants.toml
+++ b/params/variants.toml
@@ -5033,31 +5033,37 @@ tagKind = "letter"
 rank = 1
 description = "Greek lower Tau (`τ`) with a tailless shape"
 selector."grek/tau" = "tau/tailless"
+selector."grek/tau/tailed" = "tau/flatTailed"
 
 [prime.lower-tau.variants.short-tailed]
 rank = 2
 description = "Greek lower Tau (`τ`) with a very short tail"
 selector."grek/tau" = "tau/shortTailed"
+selector."grek/tau/tailed" = "tau/flatTailed"
 
 [prime.lower-tau.variants.tailed]
 rank = 3
 description = "Greek lower Tau (`τ`) with curly tail"
 selector."grek/tau" = "tau/tailed"
+selector."grek/tau/tailed" = "tau/tailed"
 
 [prime.lower-tau.variants.flat-tailed]
 rank = 4
 description = "Greek lower Tau (`τ`) with a flat tail"
 selector."grek/tau" = "tau/flatTailed"
+selector."grek/tau/tailed" = "tau/flatTailed"
 
 [prime.lower-tau.variants.diagonal-tailed]
 rank = 5
 description = "Greek lower Tau (`τ`) with a diagonal tail"
 selector."grek/tau" = "tau/diagonalTailed"
+selector."grek/tau/tailed" = "tau/diagonalTailed"
 
 [prime.lower-tau.variants.semi-tailed]
 rank = 6
 description = "Greek lower Tau (`τ`) with a slightly curly tail"
 selector."grek/tau" = "tau/semiTailed"
+selector."grek/tau/tailed" = "tau/semiTailed"
 
 
 
