Let serifs of `cyrl/gheMidHook` respond to italics

--- a/params/variants.toml
+++ b/params/variants.toml
@@ -4676,8 +4676,7 @@ selector."grek/Gamma/sansSerif" = "serifless"
 selector."cyrl/Ghe" = "serifless"
 selector."cyrl/Ge" = "serifless"
 selector."cyrl/ghe.upright" = "serifless"
-selector."cyrl/ge.upright" = "serifless"
-selector."cyrl/ge.italic" = "serifless"
+selector."cyrl/ge" = "serifless"
 
 [prime.capital-gamma.variants.top-right-serifed]
 rank = 2
@@ -4687,8 +4686,7 @@ selector."grek/Gamma/sansSerif" = "serifless"
 selector."cyrl/Ghe" = "topRightSerifed"
 selector."cyrl/Ge" = "serifless"
 selector."cyrl/ghe.upright" = "topRightSerifed"
-selector."cyrl/ge.upright" = "serifless"
-selector."cyrl/ge.italic" = "serifless"
+selector."cyrl/ge" = "serifless"
 
 [prime.capital-gamma.variants.bottom-serifed]
 rank = 3
@@ -4698,8 +4696,7 @@ selector."grek/Gamma/sansSerif" = "serifless"
 selector."cyrl/Ghe" = "bottomSerifed"
 selector."cyrl/Ge" = "bottomSerifed"
 selector."cyrl/ghe.upright" = "serifless"
-selector."cyrl/ge.upright" = "serifless"
-selector."cyrl/ge.italic" = "serifless"
+selector."cyrl/ge" = "serifless"
 
 [prime.capital-gamma.variants.serifed]
 rank = 4
@@ -4709,8 +4706,7 @@ selector."grek/Gamma/sansSerif" = "serifless"
 selector."cyrl/Ghe" = "serifed"
 selector."cyrl/Ge" = "serifed"
 selector."cyrl/ghe.upright" = "serifed"
-selector."cyrl/ge.upright" = "serifed"
-selector."cyrl/ge.italic" = "topLeftSerifed"
+selector."cyrl/ge" = "serifed"
 
 
 
