Optimize serifs of several extended cyrl letters.

--- a/params/variants.toml
+++ b/params/variants.toml
@@ -1879,7 +1879,7 @@ selectorAffix."d/hookBottomBase" = "toothed"
 selectorAffix.dCurlyTail = "toothed"
 selectorAffix.dHookTop = "toothlessRounded"
 selectorAffix."dHookTop/hookBottomBase" = "toothed"
-selectorAffix."cyrl/djeKomi" = "toothlessRounded"
+selectorAffix."cyrl/djeKomi" = "toothed"
 
 [prime.d.variants-buildup.stages.serifs.serifless]
 rank = 1
@@ -1921,7 +1921,7 @@ selectorAffix."d/hookBottomBase" = "serifless"
 selectorAffix.dCurlyTail = "serifless"
 selectorAffix.dHookTop = "bottomSerifed"
 selectorAffix."dHookTop/hookBottomBase" = "serifless"
-selectorAffix."cyrl/djeKomi" = "bottomSerifed"
+selectorAffix."cyrl/djeKomi" = "serifless"
 
 [prime.d.variants-buildup.stages.serifs.serifed__toothed]
 rank = 4
@@ -1936,7 +1936,7 @@ selectorAffix."d/hookBottomBase" = "topSerifed"
 selectorAffix.dCurlyTail = "topSerifed"
 selectorAffix.dHookTop = "bottomSerifed"
 selectorAffix."dHookTop/hookBottomBase" = "serifless"
-selectorAffix."cyrl/djeKomi" = "serifed"
+selectorAffix."cyrl/djeKomi" = "topSerifed"
 
 [prime.d.variants-buildup.stages.serifs.serifed__toothless]
 rank = 4
