--- a/params/variants.toml
+++ b/params/variants.toml
@@ -3708,14 +3708,18 @@ selectorAffix."u/sansSerif" = "toothed"
 selectorAffix."u/uRTailBase" = "urtBase"
 selectorAffix.uHookLeft = "toothed"
 selectorAffix.turnh = "toothed"
-selectorAffix.hookturnh = "toothed"
-selectorAffix.hookturnhrtail = "toothed"
+selectorAffix.turnhHookLeft = "toothed"
+selectorAffix.turnhHookLeftRTail = "toothed"
 selectorAffix.turnm = "toothed"
+selectorAffix."turnm/reduced" = "toothed"
 selectorAffix.turnmLeg = "toothed"
+selectorAffix."turnmLeg/reduced" = "toothed"
 selectorAffix."cyrl/i.italic" = "toothed"
+selectorAffix."cyrl/i.italic/descBase" = "toothed"
 selectorAffix."cyrl/sha.italic" = "toothed"
+selectorAffix."cyrl/sha/reduced.italic" = "toothed"
 selectorAffix."cyrl/shcha.italic" = "toothed"
-selectorAffix."cyrl/i.italic.reduced" = "toothed"
+selectorAffix."cyrl/shcha/reduced.italic" = "toothed"
 selectorAffix."cyrl/dzhe.italic" = "toothed"
 selectorAffix."cyrl/tse.italic" = "toothed"
 selectorAffix."ue/u" = ""
@@ -3728,14 +3732,18 @@ selectorAffix."u/sansSerif" = "tailed"
 selectorAffix."u/uRTailBase" = "urtBase"
 selectorAffix.uHookLeft = "tailed"
 selectorAffix.turnh = "toothed"
-selectorAffix.hookturnh = "toothed"
-selectorAffix.hookturnhrtail = "toothed"
+selectorAffix.turnhHookLeft = "toothed"
+selectorAffix.turnhHookLeftRTail = "toothed"
 selectorAffix.turnm = "tailed"
+selectorAffix."turnm/reduced" = "tailed"
 selectorAffix.turnmLeg = "toothed"
+selectorAffix."turnmLeg/reduced" = "toothed"
 selectorAffix."cyrl/i.italic" = "tailed"
+selectorAffix."cyrl/i.italic/descBase" = "toothed"
 selectorAffix."cyrl/sha.italic" = "tailed"
+selectorAffix."cyrl/sha/reduced.italic" = "tailed"
 selectorAffix."cyrl/shcha.italic" = "toothed"
-selectorAffix."cyrl/i.italic.reduced" = "toothed"
+selectorAffix."cyrl/shcha/reduced.italic" = "toothed"
 selectorAffix."cyrl/dzhe.italic" = "tailed"
 selectorAffix."cyrl/tse.italic" = "toothed"
 selectorAffix."ue/u" = ""
@@ -3748,14 +3756,18 @@ selectorAffix."u/sansSerif" = "toothlessCorner"
 selectorAffix."u/uRTailBase" = "urtBase"
 selectorAffix.uHookLeft = "toothlessCorner"
 selectorAffix.turnh = "toothed"
-selectorAffix.hookturnh = "toothed"
-selectorAffix.hookturnhrtail = "toothed"
+selectorAffix.turnhHookLeft = "toothed"
+selectorAffix.turnhHookLeftRTail = "toothed"
 selectorAffix.turnm = "toothlessCorner"
+selectorAffix."turnm/reduced" = "toothlessCorner"
 selectorAffix.turnmLeg = "toothed"
+selectorAffix."turnmLeg/reduced" = "toothed"
 selectorAffix."cyrl/i.italic" = "toothed"
+selectorAffix."cyrl/i.italic/descBase" = "toothed"
 selectorAffix."cyrl/sha.italic" = "toothed"
+selectorAffix."cyrl/sha/reduced.italic" = "toothed"
 selectorAffix."cyrl/shcha.italic" = "toothed"
-selectorAffix."cyrl/i.italic.reduced" = "toothed"
+selectorAffix."cyrl/shcha/reduced.italic" = "toothed"
 selectorAffix."cyrl/dzhe.italic" = "toothed"
 selectorAffix."cyrl/tse.italic" = "toothed"
 selectorAffix."ue/u" = ""
@@ -3768,14 +3780,18 @@ selectorAffix."u/sansSerif" = "toothlessRounded"
 selectorAffix."u/uRTailBase" = "urtBase"
 selectorAffix.uHookLeft = "toothlessRounded"
 selectorAffix.turnh = "toothed"
-selectorAffix.hookturnh = "toothed"
-selectorAffix.hookturnhrtail = "toothed"
+selectorAffix.turnhHookLeft = "toothed"
+selectorAffix.turnhHookLeftRTail = "toothed"
 selectorAffix.turnm = "toothlessRounded"
+selectorAffix."turnm/reduced" = "toothlessRounded"
 selectorAffix.turnmLeg = "toothed"
+selectorAffix."turnmLeg/reduced" = "toothed"
 selectorAffix."cyrl/i.italic" = "toothed"
+selectorAffix."cyrl/i.italic/descBase" = "toothed"
 selectorAffix."cyrl/sha.italic" = "toothed"
+selectorAffix."cyrl/sha/reduced.italic" = "toothed"
 selectorAffix."cyrl/shcha.italic" = "toothed"
-selectorAffix."cyrl/i.italic.reduced" = "toothed"
+selectorAffix."cyrl/shcha/reduced.italic" = "toothed"
 selectorAffix."cyrl/dzhe.italic" = "toothed"
 selectorAffix."cyrl/tse.italic" = "toothed"
 selectorAffix."ue/u" = ""
@@ -3789,14 +3805,18 @@ selectorAffix."u/sansSerif" = "serifless"
 selectorAffix."u/uRTailBase" = "serifless"
 selectorAffix.uHookLeft = "serifless"
 selectorAffix.turnh = "serifless"
-selectorAffix.hookturnh = "serifless"
-selectorAffix.hookturnhrtail = "serifless"
+selectorAffix.turnhHookLeft = "serifless"
+selectorAffix.turnhHookLeftRTail = "serifless"
 selectorAffix.turnm = "serifless"
+selectorAffix."turnm/reduced" = "serifless"
 selectorAffix.turnmLeg = "serifless"
+selectorAffix."turnmLeg/reduced" = "serifless"
 selectorAffix."cyrl/i.italic" = "serifless"
+selectorAffix."cyrl/i.italic/descBase" = "serifless"
 selectorAffix."cyrl/sha.italic" = "serifless"
+selectorAffix."cyrl/sha/reduced.italic" = "serifless"
 selectorAffix."cyrl/shcha.italic" = "serifless"
-selectorAffix."cyrl/i.italic.reduced" = "serifless"
+selectorAffix."cyrl/shcha/reduced.italic" = "serifless"
 selectorAffix."cyrl/dzhe.italic" = "serifless"
 selectorAffix."cyrl/tse.italic" = "serifless"
 selectorAffix."ue/u" = "serifless"
@@ -3809,14 +3829,18 @@ selectorAffix."u/sansSerif" = "serifless"
 selectorAffix."u/uRTailBase" = "motionSerifed"
 selectorAffix.uHookLeft = {if = [{body = "toothed"}], then = "bottomRightSerifed", else = "serifless"}
 selectorAffix.turnh = "motionSerifed"
-selectorAffix.hookturnh = "motionSerifed"
-selectorAffix.hookturnhrtail = "serifless"
+selectorAffix.turnhHookLeft = "motionSerifed"
+selectorAffix.turnhHookLeftRTail = "serifless"
 selectorAffix.turnm = {if = [{body = "toothed"}], then = "motionSerifed", else = "topLeftSerifed"}
+selectorAffix."turnm/reduced" = {if = [{body = "toothed"}], then = "motionSerifed", else = "topLeftSerifed"}
 selectorAffix.turnmLeg = "motionSerifed"
+selectorAffix."turnmLeg/reduced" = "motionSerifed"
 selectorAffix."cyrl/i.italic" = "motionSerifed"
+selectorAffix."cyrl/i.italic/descBase" = "motionSerifed"
 selectorAffix."cyrl/sha.italic" = "motionSerifed"
+selectorAffix."cyrl/sha/reduced.italic" = "motionSerifed"
 selectorAffix."cyrl/shcha.italic" = "motionSerifed"
-selectorAffix."cyrl/i.italic.reduced" = "motionSerifed"
+selectorAffix."cyrl/shcha/reduced.italic" = "motionSerifed"
 selectorAffix."cyrl/dzhe.italic" = "motionSerifed"
 selectorAffix."cyrl/tse.italic" = "motionSerifed"
 selectorAffix."ue/u" = "serifed"
@@ -3830,14 +3854,18 @@ selectorAffix."u/sansSerif" = "serifless"
 selectorAffix."u/uRTailBase" = "serifless"
 selectorAffix.uHookLeft = "bottomRightSerifed"
 selectorAffix.turnh = "serifless"
-selectorAffix.hookturnh = "serifless"
-selectorAffix.hookturnhrtail = "serifless"
+selectorAffix.turnhHookLeft = "serifless"
+selectorAffix.turnhHookLeftRTail = "serifless"
 selectorAffix.turnm = "bottomRightSerifed"
+selectorAffix."turnm/reduced" = "bottomRightSerifed"
 selectorAffix.turnmLeg = "serifless"
+selectorAffix."turnmLeg/reduced" = "serifless"
 selectorAffix."cyrl/i.italic" = "bottomRightSerifed"
+selectorAffix."cyrl/i.italic/descBase" = "serifless"
 selectorAffix."cyrl/sha.italic" = "bottomRightSerifed"
+selectorAffix."cyrl/sha/reduced.italic" = "bottomRightSerifed"
 selectorAffix."cyrl/shcha.italic" = "serifless"
-selectorAffix."cyrl/i.italic.reduced" = "serifless"
+selectorAffix."cyrl/shcha/reduced.italic" = "serifless"
 selectorAffix."cyrl/dzhe.italic" = "bottomRightSerifed"
 selectorAffix."cyrl/tse.italic" = "serifless"
 selectorAffix."ue/u" = "serifless"
@@ -3850,14 +3878,18 @@ selectorAffix."u/sansSerif" = "serifless"
 selectorAffix."u/uRTailBase" = "serifed"
 selectorAffix.uHookLeft = "serifed"
 selectorAffix.turnh = "serifed"
-selectorAffix.hookturnh = "serifed"
-selectorAffix.hookturnhrtail = "serifed"
+selectorAffix.turnhHookLeft = "serifed"
+selectorAffix.turnhHookLeftRTail = "serifed"
 selectorAffix.turnm = "serifed"
+selectorAffix."turnm/reduced" = {if = [{body = "toothed"}], then = "motionSerifed", else = "topLeftSerifed"}
 selectorAffix.turnmLeg = "serifed"
+selectorAffix."turnmLeg/reduced" = "motionSerifed"
 selectorAffix."cyrl/i.italic" = "serifed"
+selectorAffix."cyrl/i.italic/descBase" = "serifed"
 selectorAffix."cyrl/sha.italic" = "serifed"
+selectorAffix."cyrl/sha/reduced.italic" = "motionSerifed"
 selectorAffix."cyrl/shcha.italic" = "serifed"
-selectorAffix."cyrl/i.italic.reduced" = "serifed"
+selectorAffix."cyrl/shcha/reduced.italic" = "motionSerifed"
 selectorAffix."cyrl/dzhe.italic" = "serifed"
 selectorAffix."cyrl/tse.italic" = "serifed"
 selectorAffix."ue/u" = "serifed"
