* Add characters:   - LATIN CAPITAL LETTER AU (`U+A736`) (#1689).   - LATIN SMALL LETTER AU (`U+A737`) (#1689).

--- a/params/variants.toml
+++ b/params/variants.toml
@@ -1076,24 +1076,28 @@ next = "serifs"
 rank = 1
 descriptionAffix = "toothed shape"
 selectorAffix.U = "toothed"
+selectorAffix."U/noTopLeftSerif" = "toothed"
 selectorAffix."U/sansSerif" = "toothed"
 
 [prime.capital-u.variants-buildup.stages.body.tailed]
 rank = 2
 descriptionAffix = "tailed shape"
 selectorAffix.U = "tailed"
+selectorAffix."U/noTopLeftSerif" = "tailed"
 selectorAffix."U/sansSerif" = "tailed"
 
 [prime.capital-u.variants-buildup.stages.body.toothless-corner]
 rank = 3
 descriptionAffix = "toothless (corner bottom-right) shape"
 selectorAffix.U = "toothlessCorner"
+selectorAffix."U/noTopLeftSerif" = "toothlessCorner"
 selectorAffix."U/sansSerif" = "toothlessCorner"
 
 [prime.capital-u.variants-buildup.stages.body.toothless-rounded]
 rank = 4
 descriptionAffix = "toothless (rounded) shape"
 selectorAffix.U = "toothlessRounded"
+selectorAffix."U/noTopLeftSerif" = "toothlessRounded"
 selectorAffix."U/sansSerif" = "toothlessRounded"
 
 [prime.capital-u.variants-buildup.stages.serifs.serifless]
@@ -1101,6 +1105,7 @@ rank = 1
 descriptionAffix = "serifs"
 descriptionJoiner = "without"
 selectorAffix.U = "serifless"
+selectorAffix."U/noTopLeftSerif" = "serifless"
 selectorAffix."U/sansSerif" = "serifless"
 
 [prime.capital-u.variants-buildup.stages.serifs.motion-serifed]
@@ -1108,6 +1113,7 @@ rank = 2
 disableIf = [{ body = "toothless-corner" }, { body = "toothless-rounded" }]
 descriptionAffix = "motion serifs at top-left and bottom-right"
 selectorAffix.U = "unilateralMotionSerifed"
+selectorAffix."U/noTopLeftSerif" = "serifless"
 selectorAffix."U/sansSerif" = "serifless"
 
 [prime.capital-u.variants-buildup.stages.serifs.bottom-right-serifed]
@@ -1115,6 +1121,7 @@ rank = 3
 disableIf = [{ body = "NOT toothed" }]
 descriptionAffix = "serif at bottom-right"
 selectorAffix.U = "bottomRightSerifed"
+selectorAffix."U/noTopLeftSerif" = "bottomRightSerifed"
 selectorAffix."U/sansSerif" = "serifless"
 
 [prime.capital-u.variants-buildup.stages.serifs.unilateral-motion-serifed]
@@ -1122,6 +1129,7 @@ rank = 4
 disableIf = [{ body = "toothed" }, { body = "tailed" }]
 descriptionAffix = "motion serifs at left side"
 selectorAffix.U = "unilateralMotionSerifed"
+selectorAffix."U/noTopLeftSerif" = "serifless"
 selectorAffix."U/sansSerif" = "serifless"
 
 [prime.capital-u.variants-buildup.stages.serifs.bilateral-motion-serifed]
@@ -1129,12 +1137,14 @@ rank = 5
 disableIf = [{ body = "toothed" }, { body = "tailed" }]
 descriptionAffix = "motion serifs at both sides"
 selectorAffix.U = "bilateralMotionSerifed"
+selectorAffix."U/noTopLeftSerif" = "bilateralMotionSerifed"
 selectorAffix."U/sansSerif" = "serifless"
 
 [prime.capital-u.variants-buildup.stages.serifs.serifed]
 rank = 6
 descriptionAffix = "serifs"
 selectorAffix.U = "serifed"
+selectorAffix."U/noTopLeftSerif" = "serifed"
 selectorAffix."U/sansSerif" = "serifless"
 
 
@@ -3722,7 +3732,8 @@ selectorAffix."cyrl/shcha.italic" = "toothed"
 selectorAffix."cyrl/shcha/reduced.italic" = "toothed"
 selectorAffix."cyrl/dzhe.italic" = "toothed"
 selectorAffix."cyrl/tse.italic" = "toothed"
-selectorAffix."ue/u" = ""
+selectorAffix."ue/u" = "toothed"
+selectorAffix."au/u" = "toothed"
 
 [prime.u.variants-buildup.stages.body.tailed]
 rank = 2
@@ -3746,7 +3757,8 @@ selectorAffix."cyrl/shcha.italic" = "toothed"
 selectorAffix."cyrl/shcha/reduced.italic" = "toothed"
 selectorAffix."cyrl/dzhe.italic" = "tailed"
 selectorAffix."cyrl/tse.italic" = "toothed"
-selectorAffix."ue/u" = ""
+selectorAffix."ue/u" = "toothed"
+selectorAffix."au/u" = "tailed"
 
 [prime.u.variants-buildup.stages.body.toothless-corner]
 rank = 3
@@ -3770,7 +3782,8 @@ selectorAffix."cyrl/shcha.italic" = "toothed"
 selectorAffix."cyrl/shcha/reduced.italic" = "toothed"
 selectorAffix."cyrl/dzhe.italic" = "toothed"
 selectorAffix."cyrl/tse.italic" = "toothed"
-selectorAffix."ue/u" = ""
+selectorAffix."ue/u" = "toothed"
+selectorAffix."au/u" = "toothlessCorner"
 
 [prime.u.variants-buildup.stages.body.toothless-rounded]
 rank = 4
@@ -3794,7 +3807,8 @@ selectorAffix."cyrl/shcha.italic" = "toothed"
 selectorAffix."cyrl/shcha/reduced.italic" = "toothed"
 selectorAffix."cyrl/dzhe.italic" = "toothed"
 selectorAffix."cyrl/tse.italic" = "toothed"
-selectorAffix."ue/u" = ""
+selectorAffix."ue/u" = "toothed"
+selectorAffix."au/u" = "toothlessRounded"
 
 [prime.u.variants-buildup.stages.serifs.serifless]
 rank = 1
@@ -3820,6 +3834,7 @@ selectorAffix."cyrl/shcha/reduced.italic" = "serifless"
 selectorAffix."cyrl/dzhe.italic" = "serifless"
 selectorAffix."cyrl/tse.italic" = "serifless"
 selectorAffix."ue/u" = "serifless"
+selectorAffix."au/u" = "serifless"
 
 [prime.u.variants-buildup.stages.serifs.motion-serifed]
 rank = 2
@@ -3844,6 +3859,7 @@ selectorAffix."cyrl/shcha/reduced.italic" = "motionSerifed"
 selectorAffix."cyrl/dzhe.italic" = "motionSerifed"
 selectorAffix."cyrl/tse.italic" = "motionSerifed"
 selectorAffix."ue/u" = "serifed"
+selectorAffix."au/u" = {if = [{body = "toothed"}], then = "bottomRightSerifed", else = "serifless"}
 
 [prime.u.variants-buildup.stages.serifs.bottom-right-serifed]
 rank = 3
@@ -3869,6 +3885,7 @@ selectorAffix."cyrl/shcha/reduced.italic" = "serifless"
 selectorAffix."cyrl/dzhe.italic" = "bottomRightSerifed"
 selectorAffix."cyrl/tse.italic" = "serifless"
 selectorAffix."ue/u" = "serifless"
+selectorAffix."au/u" = {if = [{body = "toothed"}], then = "bottomRightSerifed", else = "serifless"}
 
 [prime.u.variants-buildup.stages.serifs.serifed]
 rank = 4
@@ -3893,6 +3910,7 @@ selectorAffix."cyrl/shcha/reduced.italic" = "motionSerifed"
 selectorAffix."cyrl/dzhe.italic" = "serifed"
 selectorAffix."cyrl/tse.italic" = "serifed"
 selectorAffix."ue/u" = "serifed"
+selectorAffix."au/u" = "serifed"
 
 
 
