Optimize non-cached build performance

--- a/packages/glyph/package.json
+++ b/packages/glyph/package.json
@@ -1,16 +1,14 @@
 {
-  "name": "@iosevka/glyph",
-  "version": "28.0.2",
-  "private": true,
-  "exports": {
-    ".": "./src/glyph.mjs",
-    "./store": "./src/store.mjs",
-    "./block": "./src/block.mjs",
-    "./relation": "./src/relation.mjs"
-  },
-  "dependencies": {
-    "@iosevka/geometry": "28.0.2",
-    "spiro": "^3.0.0",
-    "typo-geom": "^0.13.1"
-  }
+	"name": "@iosevka/glyph",
+	"version": "28.0.2",
+	"private": true,
+	"exports": {
+		".": "./src/glyph.mjs",
+		"./store": "./src/store.mjs",
+		"./block": "./src/block.mjs",
+		"./relation": "./src/relation.mjs"
+	},
+	"dependencies": {
+		"@iosevka/geometry": "28.0.2"
+	}
 }
