--- a/packages/font-kits/package.json
+++ b/packages/font-kits/package.json
@@ -1,16 +1,14 @@
 {
-  "name": "@iosevka/font-kits",
-  "version": "28.0.2",
-  "private": true,
-  "exports": {
-    "./boole-kit": "./src/boole-kit.mjs",
-    "./spiro-kit": "./src/spiro-kit.mjs"
-  },
-  "dependencies": {
-    "@iosevka/geometry": "28.0.2",
-    "@iosevka/glyph": "28.0.2",
-    "@iosevka/util": "28.0.2",
-    "spiro": "^3.0.0",
-    "typo-geom": "^0.13.1"
-  }
+	"name": "@iosevka/font-kits",
+	"version": "28.0.2",
+	"private": true,
+	"exports": {
+		"./boole-kit": "./src/boole-kit.mjs",
+		"./spiro-kit": "./src/spiro-kit.mjs"
+	},
+	"dependencies": {
+		"@iosevka/geometry": "28.0.2",
+		"@iosevka/glyph": "28.0.2",
+		"@iosevka/util": "28.0.2"
+	}
 }
