--- a/params/variants.toml
+++ b/params/variants.toml
@@ -2328,7 +2328,7 @@ description = "Serifed `i`"
 selector.dotlessi = "serifed"
 selector."dotlessi/sansSerif" = "serifless"
 selector."dotlessi/compLigRight" = "serifed"
-selector."dotlessi/italic" = "serifedFlatTailed"
+selector."dotlessi/tailed" = "serifedFlatTailed"
 
 [prime.i.variants.serifless]
 rank = 2
@@ -2337,7 +2337,7 @@ description = "`i` like a straight line"
 selector.dotlessi = "serifless"
 selector."dotlessi/sansSerif" = "serifless"
 selector."dotlessi/compLigRight" = "hooky"
-selector."dotlessi/italic" = "flatTailed"
+selector."dotlessi/tailed" = "flatTailed"
 
 [prime.i.variants.hooky]
 rank = 3
@@ -2346,7 +2346,7 @@ description = "Hooky `i`"
 selector.dotlessi = "hooky"
 selector."dotlessi/sansSerif" = "serifless"
 selector."dotlessi/compLigRight" = "hooky"
-selector."dotlessi/italic" = "serifedFlatTailed"
+selector."dotlessi/tailed" = "serifedFlatTailed"
 
 [prime.i.variants.hooky-bottom]
 rank = 4
@@ -2355,7 +2355,7 @@ description = "`i` with a sharp-turning horizontal tail"
 selector.dotlessi = "hookyBottom"
 selector."dotlessi/sansSerif" = "serifless"
 selector."dotlessi/compLigRight" = "zshaped"
-selector."dotlessi/italic" = "flatTailed"
+selector."dotlessi/tailed" = "flatTailed"
 
 [prime.i.variants.zshaped]
 rank = 5
@@ -2364,7 +2364,7 @@ description = "Z-shaped `i`"
 selector.dotlessi = "zshaped"
 selector."dotlessi/sansSerif" = "serifless"
 selector."dotlessi/compLigRight" = "zshaped"
-selector."dotlessi/italic" = "serifedFlatTailed"
+selector."dotlessi/tailed" = "serifedFlatTailed"
 
 [prime.i.variants.serifed-asymmetric]
 rank = 6
@@ -2373,7 +2373,7 @@ description = "`i` with shorter top serif and full bottom serif"
 selector.dotlessi = "serifedAsymmetric"
 selector."dotlessi/sansSerif" = "serifless"
 selector."dotlessi/compLigRight" = "serifed"
-selector."dotlessi/italic" = "serifedFlatTailed"
+selector."dotlessi/tailed" = "serifedFlatTailed"
 
 [prime.i.variants.tailed]
 rank = 7
@@ -2382,7 +2382,7 @@ description = "`i` with curly tail"
 selector.dotlessi = "tailed"
 selector."dotlessi/sansSerif" = "tailed"
 selector."dotlessi/compLigRight" = "tailedSerifed"
-selector."dotlessi/italic" = "tailed"
+selector."dotlessi/tailed" = "tailed"
 
 [prime.i.variants.tailed-serifed]
 rank = 8
@@ -2391,7 +2391,7 @@ description = "`i` with top serif and curly tail"
 selector.dotlessi = "tailedSerifed"
 selector."dotlessi/sansSerif" = "tailed"
 selector."dotlessi/compLigRight" = "tailedSerifed"
-selector."dotlessi/italic" = "tailedSerifed"
+selector."dotlessi/tailed" = "tailedSerifed"
 
 [prime.i.variants.flat-tailed]
 rank = 9
@@ -2400,7 +2400,7 @@ description = "`i` with curly-then-flat tail"
 selector.dotlessi = "flatTailed"
 selector."dotlessi/sansSerif" = "flatTailed"
 selector."dotlessi/compLigRight" = "serifedFlatTailed"
-selector."dotlessi/italic" = "flatTailed"
+selector."dotlessi/tailed" = "flatTailed"
 
 [prime.i.variants.serifed-flat-tailed]
 rank = 10
@@ -2409,7 +2409,7 @@ description = "`i` with top serif and curly-then-flat tail"
 selector.dotlessi = "serifedFlatTailed"
 selector."dotlessi/sansSerif" = "flatTailed"
 selector."dotlessi/compLigRight" = "serifedFlatTailed"
-selector."dotlessi/italic" = "serifedFlatTailed"
+selector."dotlessi/tailed" = "serifedFlatTailed"
 
 [prime.i.variants.diagonal-tailed]
 rank = 11
@@ -2418,7 +2418,7 @@ description = "`i` with diagonal tail"
 selector.dotlessi = "diagonalTailed"
 selector."dotlessi/sansSerif" = "diagonalTailed"
 selector."dotlessi/compLigRight" = "serifedDiagonalTailed"
-selector."dotlessi/italic" = "diagonalTailed"
+selector."dotlessi/tailed" = "diagonalTailed"
 
 [prime.i.variants.serifed-diagonal-tailed]
 rank = 12
@@ -2427,7 +2427,7 @@ description = "`i` with top serif and diagonal tail"
 selector.dotlessi = "serifedDiagonalTailed"
 selector."dotlessi/sansSerif" = "diagonalTailed"
 selector."dotlessi/compLigRight" = "serifedDiagonalTailed"
-selector."dotlessi/italic" = "serifedDiagonalTailed"
+selector."dotlessi/tailed" = "serifedDiagonalTailed"
 
 [prime.i.variants.semi-tailed]
 rank = 13
@@ -2436,7 +2436,7 @@ description = "`i` with slightly curly tail"
 selector.dotlessi = "semiTailed"
 selector."dotlessi/sansSerif" = "semiTailed"
 selector."dotlessi/compLigRight" = "serifedSemiTailed"
-selector."dotlessi/italic" = "semiTailed"
+selector."dotlessi/tailed" = "semiTailed"
 
 [prime.i.variants.serifed-semi-tailed]
 rank = 14
@@ -2445,7 +2445,7 @@ description = "`i` with top serif and slightly curly tail"
 selector.dotlessi = "serifedSemiTailed"
 selector."dotlessi/sansSerif" = "semiTailed"
 selector."dotlessi/compLigRight" = "serifedSemiTailed"
-selector."dotlessi/italic" = "serifedSemiTailed"
+selector."dotlessi/tailed" = "serifedSemiTailed"
 
 
 
@@ -4772,84 +4772,84 @@ rank = 1
 description = "Greek lower Iota (`ι`) like a straight line"
 selector."grek/iota" = "serifless"
 selector."grek/iota/sansSerif" = "serifless"
-selector."grek/iota/tailed" = "flatTailed"
+selector."latn/iota" = "flatTailed"
 
 [prime.lower-iota.variants.tailless-serifed]
 rank = 2
 description = "Greek lower Iota (`ι`) like a straight line with top serif"
 selector."grek/iota" = "hooky"
 selector."grek/iota/sansSerif" = "serifless"
-selector."grek/iota/tailed" = "serifedFlatTailed"
+selector."latn/iota" = "serifedFlatTailed"
 
 [prime.lower-iota.variants.hooky-bottom]
 rank = 3
 description = "Greek lower Iota (`ι`) with a sharp-turning horizontal tail"
 selector."grek/iota" = "hookyBottom"
 selector."grek/iota/sansSerif" = "serifless"
-selector."grek/iota/tailed" = "flatTailed"
+selector."latn/iota" = "flatTailed"
 
 [prime.lower-iota.variants.zshaped]
 rank = 4
 description = "Z-shaped Greek lower Iota (`ι`)"
 selector."grek/iota" = "zshaped"
 selector."grek/iota/sansSerif" = "serifless"
-selector."grek/iota/tailed" = "serifedFlatTailed"
+selector."latn/iota" = "serifedFlatTailed"
 
 [prime.lower-iota.variants.tailed]
 rank = 5
 description = "Greek lower Iota (`ι`) with curly tail"
 selector."grek/iota" = "tailed"
 selector."grek/iota/sansSerif" = "tailed"
-selector."grek/iota/tailed" = "tailed"
+selector."latn/iota" = "tailed"
 
 [prime.lower-iota.variants.tailed-serifed]
 rank = 6
 description = "Greek lower Iota (`ι`) with top serif and curly tail"
 selector."grek/iota" = "tailedSerifed"
 selector."grek/iota/sansSerif" = "tailed"
-selector."grek/iota/tailed" = "tailedSerifed"
+selector."latn/iota" = "tailedSerifed"
 
 [prime.lower-iota.variants.flat-tailed]
 rank = 7
 description = "Greek lower Iota (`ι`) with a curly-then-flat tail"
 selector."grek/iota" = "flatTailed"
 selector."grek/iota/sansSerif" = "flatTailed"
-selector."grek/iota/tailed" = "flatTailed"
+selector."latn/iota" = "flatTailed"
 
 [prime.lower-iota.variants.serifed-flat-tailed]
 rank = 8
 description = "Greek lower Iota (`ι`) with top serif and a curly-then-flat tail"
 selector."grek/iota" = "serifedFlatTailed"
 selector."grek/iota/sansSerif" = "flatTailed"
-selector."grek/iota/tailed" = "serifedFlatTailed"
+selector."latn/iota" = "serifedFlatTailed"
 
 [prime.lower-iota.variants.diagonal-tailed]
 rank = 9
 description = "Greek lower Iota (`ι`) with a diagonal tail"
 selector."grek/iota" = "diagonalTailed"
 selector."grek/iota/sansSerif" = "diagonalTailed"
-selector."grek/iota/tailed" = "diagonalTailed"
+selector."latn/iota" = "diagonalTailed"
 
 [prime.lower-iota.variants.serifed-diagonal-tailed]
 rank = 10
 description = "Greek lower Iota (`ι`) with top serif and a diagonal tail"
 selector."grek/iota" = "serifedDiagonalTailed"
 selector."grek/iota/sansSerif" = "diagonalTailed"
-selector."grek/iota/tailed" = "serifedDiagonalTailed"
+selector."latn/iota" = "serifedDiagonalTailed"
 
 [prime.lower-iota.variants.semi-tailed]
 rank = 11
 description = "Greek lower Iota (`ι`) with a slightly curly tail"
 selector."grek/iota" = "semiTailed"
 selector."grek/iota/sansSerif" = "semiTailed"
-selector."grek/iota/tailed" = "semiTailed"
+selector."latn/iota" = "semiTailed"
 
 [prime.lower-iota.variants.serifed-semi-tailed]
 rank = 12
 description = "Greek lower Iota (`ι`) with top serif and a slightly curly tail"
 selector."grek/iota" = "serifedSemiTailed"
 selector."grek/iota/sansSerif" = "semiTailed"
-selector."grek/iota/tailed" = "serifedSemiTailed"
+selector."latn/iota" = "serifedSemiTailed"
 
 
 
