Improve lower `r` for Etoile.

--- a/build-plans.toml
+++ b/build-plans.toml
@@ -769,6 +769,7 @@ f = "flat-hook-serifed"
 i = "serifed"
 j = "flat-hook-serifed"
 l = "serifed"
+r = "compact-serifed"
 t = "flat-hook"
 w = "straight-flat-top-serifed"
 long-s = "flat-hook-bottom-serifed"
@@ -783,6 +784,7 @@ percent = "rings-continuous-slash"
 f = "flat-hook-tailed"
 i = "serifed-flat-tailed"
 l = "serifed-flat-tailed"
+r = "compact-top-serifed"
 w = "straight-flat-top-motion-serifed"
 long-s = "flat-hook-tailed"
 eszet = "longs-s-lig-tailed-serifless"
