Make Cyrillic Lower Zhe cursive under Slab Italic.

--- a/params/variants.toml
+++ b/params/variants.toml
@@ -7727,6 +7727,7 @@ long-s = "flat-hook-tailed"
 eszet = "sulzbacher-tailed-serifless"
 lower-lambda = "straight"
 lower-mu = "tailed-motion-serifed"
+cyrl-zhe = "cursive"
 cyrl-ze = "unilateral-inward-serifed"
 cyrl-ka = "symmetric-connected-top-left-serifed"
 cyrl-en = "top-left-bottom-right-serifed"
@@ -8128,6 +8129,7 @@ lower-lambda = "straight-turn"
 lower-mu = "toothed-serifless"
 lower-xi = "rounded"
 lower-tau = "semi-tailed"
+cyrl-zhe = "symmetric-connected"
 cyrl-em = "slanted-sides-hanging-serifless"
 cyrl-capital-u = "straight-turn-serifless"
 cyrl-u = "straight-turn-serifless"
@@ -8211,6 +8213,7 @@ lower-iota = "tailed-serifed"
 lower-lambda = "straight-turn"
 lower-tau = "short-tailed"
 lower-chi = "straight-motion-serifed"
+cyrl-zhe = "symmetric-connected"
 cyrl-em = "flat-bottom-serifless"
 cyrl-capital-u = "straight-turn-serifless"
 cyrl-u = "straight-turn-serifless"
@@ -8299,6 +8302,7 @@ lower-iota = "zshaped"
 lower-lambda = "straight-turn"
 lower-pi = "tailless"
 lower-tau = "tailless"
+cyrl-zhe = "symmetric-connected"
 cyrl-capital-u = "straight-turn-serifless"
 cyrl-u = "straight-turn-serifless"
 cyrl-ef = "serifless"
@@ -8457,7 +8461,6 @@ long-s = "bent-hook-double-serifed"
 eszet = "longs-s-lig-bottom-serifed"
 capital-lambda = "curly-base-serifed"
 lower-mu = "toothed-serifed"
-lower-chi = "curly-serifed"
 cyrl-capital-ka = "curly-serifed"
 cyrl-ka = "curly-serifed"
 cyrl-capital-u = "curly-serifed"
@@ -8506,6 +8509,7 @@ long-s = "flat-hook-middle-serifed"
 eszet = "longs-s-lig-serifless"
 lower-lambda = "straight-turn"
 lower-tau = "short-tailed"
+cyrl-zhe = "symmetric-connected"
 cyrl-em = "flat-bottom-serifless"
 cyrl-capital-u = "straight-turn-serifless"
 cyrl-u = "straight-turn-serifless"
@@ -8806,6 +8810,7 @@ lower-lambda = "straight-turn"
 lower-mu = "toothed-serifless"
 lower-pi = "tailless"
 lower-tau = "tailless"
+cyrl-zhe = "symmetric-connected"
 cyrl-em = "flat-bottom-serifless"
 cyrl-capital-u = "straight-turn-serifless"
 cyrl-u = "straight-turn-serifless"
@@ -8894,6 +8899,7 @@ lower-lambda = "straight"
 lower-mu = "toothed-serifless"
 lower-xi = "rounded"
 lower-tau = "flat-tailed"
+cyrl-zhe = "symmetric-connected"
 cyrl-yeri = "corner"
 cyrl-yery = "corner"
 zero = "dotted"
@@ -9104,6 +9110,7 @@ lower-lambda = "straight-turn"
 lower-mu = "toothed-bottom-right-serifed"
 lower-tau = "semi-tailed"
 cyrl-capital-ze = "bilateral-inward-serifed"
+cyrl-zhe = "symmetric-connected"
 cyrl-ze = "unilateral-inward-serifed"
 cyrl-ka = "symmetric-connected-bottom-right-serifed"
 cyrl-er = "eared-motion-serifed"
@@ -9307,6 +9314,7 @@ eszet = "longs-s-lig-serifless"
 lower-alpha = "barred-tailed"
 lower-lambda = "straight-turn"
 lower-tau = "short-tailed"
+cyrl-zhe = "symmetric-connected"
 cyrl-capital-u = "straight-turn-serifless"
 cyrl-u = "straight-turn-serifless"
 cyrl-ef = "serifless"
