Add untagged variant selector for cyrl-capital-ef.

--- a/params/variants.toml
+++ b/params/variants.toml
@@ -5832,6 +5832,35 @@ selectorAffix."cyrl/u" = "serifed"
 
 
 
+[prime.cyrl-capital-ef]
+# No tags and sampler -- for style-driven variation
+
+[prime.cyrl-capital-ef.variants.serifless]
+rank = 1
+selector."grek/Phi"  = "serifless"
+selector."cyrl/Ef"  = "serifless"
+selector."cyrl/Ef.BGR" = "serifless"
+
+[prime.cyrl-capital-ef.variants.serifed]
+rank = 2
+selector."grek/Phi"  = "serifed"
+selector."cyrl/Ef"  = "serifed"
+selector."cyrl/Ef.BGR" = "serifed"
+
+[prime.cyrl-capital-ef.variants.split-serifless]
+rank = 3
+selector."grek/Phi"  = "serifless"
+selector."cyrl/Ef"  = "splitBowlSerifless"
+selector."cyrl/Ef.BGR" = "serifless"
+
+[prime.cyrl-capital-ef.variants.split-serifed]
+rank = 4
+selector."grek/Phi"  = "serifed"
+selector."cyrl/Ef"  = "splitBowlSerifed"
+selector."cyrl/Ef.BGR" = "serifed"
+
+
+
 [prime.cyrl-ef]
 sampler = "ф"
 samplerExplain = "Cyrillic Lower Ef"
@@ -7560,6 +7589,7 @@ cyrl-en = "serifless"
 cyrl-er = "eared-serifless"
 cyrl-capital-u = "straight-serifless"
 cyrl-u = "straight-serifless"
+cyrl-capital-ef = "serifless"
 cyrl-ef = "serifless"
 cyrl-che = "standard"
 cyrl-capital-yeri = "corner"
@@ -7699,6 +7729,7 @@ cyrl-en = "serifed"
 cyrl-er = "eared-serifed"
 cyrl-capital-u = "straight-turn-serifed"
 cyrl-u = "straight-turn-serifed"
+cyrl-capital-ef = "serifed"
 cyrl-ef = "serifed"
 cyrl-capital-ya = "straight-serifed"
 cyrl-ya = "straight-serifed"
