--- a/params/variants.toml
+++ b/params/variants.toml
@@ -2256,7 +2256,6 @@ selectorAffix."h/sansSerif" = "straight"
 selectorAffix.hHookTop = "straight"
 selectorAffix.hengHookTop = "straight"
 selectorAffix.heng = "straight"
-selectorAffix."cyrl/shha" = "straight"
 
 [prime.h.variants-buildup.stages.tail.tailed]
 rank = 2
@@ -2267,7 +2266,6 @@ selectorAffix."h/sansSerif" = "tailed"
 selectorAffix.hHookTop = "tailed"
 selectorAffix.hengHookTop = "straight"
 selectorAffix.heng = "straight"
-selectorAffix."cyrl/shha" = "tailed"
 
 [prime.h.variants-buildup.stages.serifs.serifless]
 rank = 1
@@ -2279,7 +2277,6 @@ selectorAffix."h/sansSerif" = "serifless"
 selectorAffix.hHookTop = "serifless"
 selectorAffix.hengHookTop = "serifless"
 selectorAffix.heng = "serifless"
-selectorAffix."cyrl/shha" = "serifless"
 
 [prime.h.variants-buildup.stages.serifs.top-left-serifed]
 rank = 2
@@ -2291,7 +2288,6 @@ selectorAffix."h/sansSerif" = "serifless"
 selectorAffix.hHookTop = "serifless"
 selectorAffix.hengHookTop = "serifless"
 selectorAffix.heng = "topLeftSerifed"
-selectorAffix."cyrl/shha" = "topLeftSerifed"
 
 [prime.h.variants-buildup.stages.serifs.motion-serifed]
 rank = 3
@@ -2302,7 +2298,6 @@ selectorAffix."h/sansSerif" = "serifless"
 selectorAffix.hHookTop = { if = [{ tail = "straight" }], then = "motionSerifed", else = "serifless" }
 selectorAffix.hengHookTop = "serifless"
 selectorAffix.heng = "topLeftSerifed"
-selectorAffix."cyrl/shha" = "motionSerifed"
 
 [prime.h.variants-buildup.stages.serifs.serifed]
 rank = 4
@@ -2313,7 +2308,6 @@ selectorAffix."h/sansSerif" = "serifless"
 selectorAffix.hHookTop = "serifed"
 selectorAffix.hengHookTop = "serifed"
 selectorAffix.heng = "serifed"
-selectorAffix."cyrl/shha" = "serifed"
 
 
 
@@ -3759,11 +3753,11 @@ selectorAffix.u = "toothlessCorner"
 selectorAffix."u/sansSerif" = "toothlessCorner"
 selectorAffix."u/uRTailBase" = "urtBase"
 selectorAffix.uHookLeft = "toothlessCorner"
-selectorAffix.turnh = "toothed"
-selectorAffix.turnhHookLeft = "toothed"
-selectorAffix.turnhHookLeftRTail = "toothed"
+selectorAffix.turnh = "toothlessCorner"
+selectorAffix.turnhHookLeft = "toothlessCorner"
+selectorAffix.turnhHookLeftRTail = "toothlessCorner"
 selectorAffix.turnm = "toothlessCorner"
-selectorAffix.turnmLeg = "toothed"
+selectorAffix.turnmLeg = "toothlessCorner"
 selectorAffix."cyrl/i.italic" = "toothed"
 selectorAffix."cyrl/i.italic/descBase" = "toothed"
 selectorAffix."cyrl/sha.italic" = "toothed"
@@ -3824,9 +3818,9 @@ selectorAffix."u/sansSerif" = "serifless"
 selectorAffix."u/uRTailBase" = "motionSerifed"
 selectorAffix.uHookLeft = {if = [{body = "toothed"}], then = "bottomRightSerifed", else = "serifless"}
 selectorAffix.turnh = "motionSerifed"
-selectorAffix.turnhHookLeft = "motionSerifed"
+selectorAffix.turnhHookLeft = "bottomRightSerifed"
 selectorAffix.turnhHookLeftRTail = "serifless"
-selectorAffix.turnm = {if = [{body = "toothed"}], then = "motionSerifed", else = "topLeftSerifed"}
+selectorAffix.turnm = "motionSerifed"
 selectorAffix.turnmLeg = "motionSerifed"
 selectorAffix."cyrl/i.italic" = "motionSerifed"
 selectorAffix."cyrl/i.italic/descBase" = "motionSerifed"
