Make `cyrl/ue` and `latn/gamma` respond to italics

--- a/params/variants.toml
+++ b/params/variants.toml
@@ -1393,7 +1393,7 @@ selectorAffix.Y = "serifed"
 selectorAffix."Y/sansSerif" = "serifless"
 selectorAffix.YLoop = "serifed"
 selectorAffix."grek/UpsilonHookTop" = "BaseSerifed"
-selectorAffix."cyrl/ue" = "serifed"
+selectorAffix."cyrl/ue" = "smallCyrl"
 
 
 
