`zero` feature will apply to composites (#2191).

--- a/params/variants.toml
+++ b/params/variants.toml
@@ -6240,6 +6240,9 @@ selectorAffix."cyrl/yae/left" = "bottomRightSerifed"
 sampler = "0"
 tagKind = "digit"
 
+[[prime.zero.cherryPicking]]
+tag = "zero"
+
 [prime.zero.variants-buildup]
 entry = "body"
 descriptionLeader = "Zero (`0`)"
