Add selectable serifed variants of digits.

--- a/params/variants.toml
+++ b/params/variants.toml
@@ -6467,15 +6467,38 @@ selector."one/sansSerif" = "noBaseTopCut"
 sampler = "2"
 tagKind = "digit"
 
-[prime.two.variants.straight-neck]
-rank = 1
-description = "`2` with straight neck"
-selector.two = "straightNeck"
+[prime.two.variants-buildup]
+entry = "body"
+descriptionLeader = "`2`"
 
-[prime.two.variants.curly-neck]
+[prime.two.variants-buildup.stages.body."*"]
+next = "serifs"
+
+[prime.two.variants-buildup.stages.body.straight-neck]
+rank = 1
+descriptionAffix = "straight neck"
+selectorAffix.two = "straightNeck"
+selectorAffix."two/sansSerif" = "straightNeck"
+
+[prime.two.variants-buildup.stages.body.curly-neck]
 rank = 2
-description = "`2` with curly neck"
-selector.two = "curlyNeck"
+descriptionAffix = "curly neck"
+selectorAffix.two = "curlyNeck"
+selectorAffix."two/sansSerif" = "curlyNeck"
+
+[prime.two.variants-buildup.stages.serifs.serifless]
+rank = 1
+keyAffix = ""
+descriptionJoiner = "without"
+descriptionAffix = "serifs"
+selectorAffix.two = "serifless"
+selectorAffix."two/sansSerif" = "serifless"
+
+[prime.two.variants-buildup.stages.serifs.serifed]
+rank = 2
+descriptionAffix = "serifs"
+selectorAffix.two = "serifed"
+selectorAffix."two/sansSerif" = "serifless"
 
 
 
@@ -6483,15 +6506,39 @@ selector.two = "curlyNeck"
 sampler = "3"
 tagKind = "digit"
 
-[prime.three.variants.flat-top]
-rank = 1
-description = "Flat top `3` (Like Museo Sans / Montserrat)"
-selector.three = "flatTop"
+[prime.three.variants-buildup]
+entry = "body"
+descriptionLeader = "`3`"
 
-[prime.three.variants.two-arcs]
+[prime.three.variants-buildup.stages.body."*"]
+next = "serifs"
+
+[prime.three.variants-buildup.stages.body.flat-top]
+rank = 1
+descriptionAffix = "flat top (Like Museo Sans / Montserrat)"
+selectorAffix.three = "flatTop"
+selectorAffix."three/sansSerif" = "flatTop"
+
+[prime.three.variants-buildup.stages.body.two-arcs]
 rank = 2
-description = "Arched top `3`"
-selector.three = "twoArcs"
+next = "END"
+descriptionAffix = "arched top"
+selectorAffix.three = "twoArcs"
+selectorAffix."three/sansSerif" = "twoArcs"
+
+[prime.three.variants-buildup.stages.serifs.serifless]
+rank = 1
+keyAffix = ""
+descriptionJoiner = "without"
+descriptionAffix = "serifs"
+selectorAffix.three = "serifless"
+selectorAffix."three/sansSerif" = "serifless"
+
+[prime.three.variants-buildup.stages.serifs.serifed]
+rank = 2
+descriptionAffix = "serifs"
+selectorAffix.three = "serifed"
+selectorAffix."three/sansSerif" = "serifless"
 
 
 
@@ -6499,35 +6546,59 @@ selector.three = "twoArcs"
 sampler = "4"
 tagKind = "digit"
 
-[prime.four.variants.closed]
+[prime.four.variants-buildup]
+entry = "openness"
+descriptionLeader = "`4`"
+
+[prime.four.variants-buildup.stages.openness."*"]
+next = "horizontal-bar"
+
+[prime.four.variants-buildup.stages.openness.closed]
 rank = 1
-description = "`4` with closed contour"
-selector.four = "closed"
+descriptionAffix = "closed contour"
+selectorAffix.four = "closed"
+selectorAffix."four/sansSerif" = "closed"
 
-[prime.four.variants.closed-non-crossing]
+[prime.four.variants-buildup.stages.openness.semi-open]
 rank = 2
-description = "`4` with closed contour but the horizontal bar does not overflow the vertical bar"
-selector.four = "closedNonCrossing"
+descriptionAffix = "semi-open contour"
+selectorAffix.four = "semiOpen"
+selectorAffix."four/sansSerif" = "semiOpen"
 
-[prime.four.variants.semi-open]
+[prime.four.variants-buildup.stages.openness.open]
 rank = 3
-description = "`4` with semi-open contour"
-selector.four = "semiOpen"
+descriptionAffix = "open contour"
+selectorAffix.four = "open"
+selectorAffix."four/sansSerif" = "open"
 
-[prime.four.variants.semi-open-non-crossing]
-rank = 4
-description = "`4` with semi-open contour but the horizontal bar does not overflow the vertical bar"
-selector.four = "semiOpenNonCrossing"
+[prime.four.variants-buildup.stages.horizontal-bar."*"]
+next = "serifs"
 
-[prime.four.variants.open]
-rank = 5
-description = "`4` with open contour"
-selector.four = "open"
+[prime.four.variants-buildup.stages.horizontal-bar.crossing]
+rank = 1
+keyAffix = ""
+selectorAffix.four = "crossing"
+selectorAffix."four/sansSerif" = "crossing"
 
-[prime.four.variants.open-non-crossing]
-rank = 6
-description = "`4` with open contour but the horizontal bar does not overflow the vertical bar"
-selector.four = "openNonCrossing"
+[prime.four.variants-buildup.stages.horizontal-bar.non-crossing]
+rank = 2
+descriptionAffix = "horizontal bar that does not overflow the vertical bar"
+selectorAffix.four = "nonCrossing"
+selectorAffix."four/sansSerif" = "nonCrossing"
+
+[prime.four.variants-buildup.stages.serifs.serifless]
+rank = 1
+keyAffix = ""
+descriptionJoiner = "without"
+descriptionAffix = "serifs"
+selectorAffix.four = "serifless"
+selectorAffix."four/sansSerif" = "serifless"
+
+[prime.four.variants-buildup.stages.serifs.serifed]
+rank = 2
+descriptionAffix = "serifs"
+selectorAffix.four = "serifed"
+selectorAffix."four/sansSerif" = "serifless"
 
 
 
@@ -6546,25 +6617,48 @@ next = "middle"
 rank = 1
 descriptionAffix = "upright upper-left bar"
 selectorAffix.five = "upright"
+selectorAffix."five/sansSerif" = "upright"
 selectorAffix.zhuangToneFive = "upright"
 
 [prime.five.variants-buildup.stages.upper-left-bar.oblique]
 rank = 2
 description = "oblique upper-left bar"
 selectorAffix.five = "oblique"
+selectorAffix."five/sansSerif" = "oblique"
 selectorAffix.zhuangToneFive = "upright"
+
+[prime.five.variants-buildup.stages.middle."*"]
+next = "serifs"
 
 [prime.five.variants-buildup.stages.middle.arched]
 rank = 1
 descriptionAffix = "arched middle part"
 selectorAffix.five = "arched"
+selectorAffix."five/sansSerif" = "arched"
 selectorAffix.zhuangToneFive = "arched"
 
 [prime.five.variants-buildup.stages.middle.flat]
 rank = 2
 descriptionAffix = "flat middle part"
 selectorAffix.five = "flat"
+selectorAffix."five/sansSerif" = "flat"
 selectorAffix.zhuangToneFive = "flat"
+
+[prime.five.variants-buildup.stages.serifs.serifless]
+rank = 1
+keyAffix = ""
+descriptionJoiner = "without"
+descriptionAffix = "serifs"
+selectorAffix.five = "serifless"
+selectorAffix."five/sansSerif" = "serifless"
+selectorAffix.zhuangToneFive = "serifless"
+
+[prime.five.variants-buildup.stages.serifs.serifed]
+rank = 2
+descriptionAffix = "serifs"
+selectorAffix.five = "serifed"
+selectorAffix."five/sansSerif" = "serifless"
+selectorAffix.zhuangToneFive = "serifed"
 
 
 
@@ -7764,6 +7858,9 @@ cyrl-ef = "serifed"
 cyrl-capital-ya = "straight-serifed"
 cyrl-ya = "straight-serifed"
 one = "base"
+two = "curly-neck-serifed"
+four = "semi-open-serifed"
+five = "upright-arched-serifed"
 seven = "straight-serifed"
 micro-sign = "toothed-serifed"
 
@@ -7890,6 +7987,8 @@ cyrl-em = "flat-bottom-serifed"
 cyrl-capital-u = "straight-turn-serifed"
 cyrl-u = "straight-turn-serifed"
 cyrl-ef = "split-serifed"
+two = "straight-neck-serifed"
+four = "closed-serifed"
 micro-sign = "toothed-serifed"
 
 
@@ -7940,8 +8039,8 @@ cyrl-ef = "split-serifless"
 cyrl-yeri = "corner"
 cyrl-yery = "corner"
 one = "base"
-two = "straight-neck"
-four = "closed"
+two = "straight-neck-serifed"
+four = "closed-serifed"
 six = "closed-contour"
 seven = "bend-serifed"
 eight = "two-circles"
@@ -8066,6 +8165,8 @@ cyrl-em = "slanted-sides-hanging-serifed"
 cyrl-capital-u = "straight-turn-serifed"
 cyrl-u = "straight-turn-serifed"
 cyrl-ef = "serifed"
+two = "straight-neck-serifed"
+four = "closed-serifed"
 micro-sign = "tailed-serifed"
 
 [composite.ss03.slab-override.italic]
@@ -8168,6 +8269,8 @@ cyrl-ka = "straight-serifed"
 cyrl-capital-u = "straight-turn-serifed"
 cyrl-u = "straight-turn-serifed"
 cyrl-ef = "serifed"
+two = "straight-neck-serifed"
+four = "closed-serifed"
 micro-sign = "tailed-serifed"
 
 
@@ -8256,6 +8359,7 @@ cyrl-em = "slanted-sides-hanging-serifed"
 cyrl-capital-u = "straight-turn-serifed"
 cyrl-u = "straight-turn-serifed"
 cyrl-ef = "split-serifed"
+two = "straight-neck-serifed"
 micro-sign = "toothed-serifed"
 
 
@@ -8341,6 +8445,8 @@ cyrl-em = "flat-bottom-serifed"
 cyrl-capital-u = "straight-turn-serifed"
 cyrl-u = "straight-turn-serifed"
 cyrl-ef = "serifed"
+four = "closed-serifed"
+five = "oblique-arched-serifed"
 seven = "bend-serifed"
 micro-sign = "toothed-serifed"
 
@@ -8426,6 +8532,7 @@ cyrl-ka = "symmetric-connected-serifed"
 cyrl-capital-u = "straight-turn-serifed"
 cyrl-u = "straight-turn-serifed"
 cyrl-ef = "serifed"
+four = "closed-serifed"
 seven = "curly-serifed"
 micro-sign = "toothed-serifed"
 
@@ -8540,6 +8647,8 @@ cyrl-u = "curly-serifed"
 cyrl-ef = "serifed"
 cyrl-capital-ya = "curly-serifed"
 cyrl-ya = "curly-serifed"
+four = "closed-serifed"
+five = "upright-flat-serifed"
 seven = "bend-serifed"
 micro-sign = "toothed-serifed"
 
@@ -8628,6 +8737,9 @@ cyrl-em = "flat-bottom-serifed"
 cyrl-capital-u = "straight-turn-serifed"
 cyrl-u = "straight-turn-serifed"
 cyrl-ef = "split-serifed"
+two = "straight-neck-serifed"
+four = "closed-serifed"
+five = "oblique-arched-serifed"
 seven = "bend-serifed"
 micro-sign = "tailed-serifed"
 
@@ -8700,6 +8812,7 @@ long-s = "flat-hook-double-serifed"
 eszet = "sulzbacher-bottom-serifed"
 cyrl-capital-u = "straight-serifed"
 cyrl-u = "straight-serifed"
+four = "closed-serifed"
 micro-sign = "toothless-rounded-serifed"
 
 [composite.ss10.slab-override.italic]
@@ -8735,6 +8848,11 @@ guillemet = "straight"
 dollar = "through-cap"
 cent = "through-cap"
 percent = "rings-continuous-slash"
+
+[composite.ss11.slab-override.design]
+two = "straight-neck-serifed"
+three = "flat-top-serifed"
+four = "closed-serifed"
 
 
 
@@ -8834,6 +8952,8 @@ cyrl-em = "slanted-sides-hanging-serifed"
 cyrl-capital-u = "straight-turn-serifed"
 cyrl-u = "straight-turn-serifed"
 cyrl-ef = "serifed"
+four = "closed-serifed"
+five = "oblique-arched-serifed"
 seven = "bend-serifed"
 micro-sign = "toothless-corner-serifed"
 
@@ -8937,6 +9057,7 @@ cyrl-em = "flat-bottom-serifed"
 cyrl-capital-u = "straight-turn-serifed"
 cyrl-u = "straight-turn-serifed"
 cyrl-ef = "split-serifed"
+four = "closed-serifed"
 seven = "bend-serifed"
 micro-sign = "toothed-serifed"
 
@@ -9019,6 +9140,10 @@ lower-alpha = "barred-double-serifed"
 lower-mu = "toothed-serifed"
 cyrl-capital-u = "straight-serifed"
 cyrl-u = "straight-serifed"
+two = "straight-neck-serifed"
+three = "flat-top-serifed"
+four = "semi-open-non-crossing-serifed"
+five = "upright-flat-serifed"
 micro-sign = "toothed-serifed"
 
 [composite.ss14.slab-override.italic]
@@ -9127,6 +9252,9 @@ cyrl-u = "straight-turn-serifed"
 cyrl-ef = "split-serifed"
 cyrl-capital-ya = "straight-serifed"
 cyrl-ya = "straight-serifed"
+two = "straight-neck-serifed"
+four = "closed-serifed"
+five = "oblique-arched-serifed"
 micro-sign = "toothed-serifed"
 
 [composite.ss15.slab-override.italic]
@@ -9232,6 +9360,9 @@ cyrl-capital-u = "straight-turn-serifed"
 cyrl-u = "straight-turn-serifed"
 cyrl-ef = "split-serifed"
 cyrl-ya = "straight-serifed"
+two = "straight-neck-serifed"
+three = "flat-top-serifed"
+four = "closed-serifed"
 micro-sign = "toothed-serifed"
 
 
@@ -9345,6 +9476,7 @@ cyrl-capital-u = "straight-turn-serifed"
 cyrl-u = "straight-turn-serifed"
 cyrl-capital-ya = "straight-serifed"
 cyrl-ya = "straight-serifed"
+five = "oblique-arched-serifed"
 micro-sign = "tailed-serifed"
 
 [composite.ss17.slab-override.italic]
@@ -9431,6 +9563,8 @@ lower-alpha = "barred-tailed-serifed"
 cyrl-capital-u = "straight-turn-serifed"
 cyrl-u = "straight-turn-serifed"
 cyrl-ef = "serifed"
+four = "closed-serifed"
+five = "upright-flat-serifed"
 seven = "bend-serifed"
 micro-sign = "tailed-serifed"
 
